Update timeout